--- a/.banzaicloud/charts/spotguide-java-vault/templates/deployment.yaml
+++ b/.banzaicloud/charts/spotguide-java-vault/templates/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "spotguide-java-vault.fullname" . }}
@@ -25,7 +25,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -36,6 +36,8 @@ spec:
               path: /
               port: http
           env:
+            - name: VAULT_URI
+              value: https://{{ .Release.Name }}-vault:8200
             {{ range $key, $value := .Values.env }}
             - name: {{ $key }}
               value: {{ $value | quote }}
