Vault path fixes

--- a/.banzaicloud/charts/spotguide-java-vault/values.yaml
+++ b/.banzaicloud/charts/spotguide-java-vault/values.yaml
@@ -48,6 +48,10 @@ tolerations: []
 affinity: {}
 
 vault:
+  unsealer:
+    image:
+      tag: latest
+      pullPolicy: IfNotPresent
   vault:
     externalConfig:
       policies:
@@ -57,6 +61,9 @@ vault:
           }
           path "secret/metadata/*" {
             capabilities = ["delete", "list"]
+          }
+          path "sys/mounts" {
+            capabilities = ["read", "list"]
           }
       auth:
       - type: kubernetes
