--- a/.banzaicloud/charts/spotguide-java-vault/templates/deployment.yaml
+++ b/.banzaicloud/charts/spotguide-java-vault/templates/deployment.yaml
@@ -50,6 +50,7 @@ spec:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 30 # When using resource limits the JVM needs some time to start-up
           readinessProbe:
             httpGet:
               path: /
